# result

./: .bumpversion.cfg  .codecov.yaml  .cruft.json  .gitignore  .pylintrc  .readthedocs.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  targets.mk  tox.ini
.github/: CODEOWNERS  labels.yml
.github/workflows/: ci.yml  labeler.yml
docs/source/: conf.py  index.rst  modules.rst  result.cli.rst  result.result.rst  result.rst
docs/source/_static/: README.md
docs/source/_templates/: README.md  footer.html
scripts/: README.md
src/result/: __init__.py  _core.py  api.py  cli.py
tests/: __init__.py  conftest.py  test_cli.py  test_result.py
